# FreeDuckDuckGo-Assist

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  dockerfile  duckassist.py  example.py  pyproject.toml  requirement.txt  requirements.txt  vercel.json
duckgpt/: __main__.py  duckassist.py  main.py
src/: main.py
